# project-pack-factory

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.pack-state/remote-autonomy-staging/api-contract-autonomy-transfer-build-pack-v1-continuity-run-v1/payload/: README.md  pyproject.toml
.pack-state/remote-autonomy-staging/json-health-checker-longer-backlog-build-pack-v3-active-task-continuity-run-v4/payload/: AGENTS.md  pack.json  pyproject.toml
.pack-state/remote-autonomy-staging/release-evidence-autonomy-transfer-build-pack-v1-active-task-continuity-run-v1/payload/: pack.json  pyproject.toml
build-packs/agent-native-project-initialization-smoke-build-pack-v1/: AGENTS.md  pack.json  project-context.md  pyproject.toml
build-packs/agent-native-project-initialization-smoke-build-pack-v1/.packfactory-runtime/: manifest.json
build-packs/agent-native-project-initialization-smoke-build-pack-v1/contracts/: project-objective.json
build-packs/agent-native-project-initialization-smoke-build-pack-v1/eval/latest/: index.json
build-packs/agent-native-project-initialization-smoke-build-pack-v1/lineage/: source-template.json
build-packs/agent-native-project-initialization-smoke-build-pack-v1/status/: deployment.json  lifecycle.json  readiness.json  retirement.json  work-state.json
build-packs/agent-native-project-initialization-smoke-build-pack-v1/tasks/: active-backlog.json
build-packs/config-drift-checker-build-pack/: AGENTS.md  README.md  pack.json  project-context.md  pyproject.toml
build-packs/config-drift-checker-build-pack/.pack-state/python-dist/: config_drift_checker_build_pack-0.1.0-py3-none-any.whl
build-packs/config-drift-checker-build-pack/benchmarks/: active-set.json
build-packs/config-drift-checker-build-pack/benchmarks/declarations/: config-drift-checker-build-pack-smoke-small-001.json
build-packs/config-drift-checker-build-pack/contracts/: config-drift-checker.contract.md
build-packs/config-drift-checker-build-pack/docs/specs/: README.md  config-drift-checker-objective-brief.md
build-packs/config-drift-checker-build-pack/eval/latest/: index.json
build-packs/config-drift-checker-build-pack/lineage/: source-template.json
build-packs/config-drift-checker-build-pack/src/config_drift_checker_build_pack/: benchmark_smoke.py  cli.py  drift_runtime.py
build-packs/config-drift-checker-build-pack/status/: deployment.json  lifecycle.json  readiness.json  retirement.json
build-packs/config-drift-checker-build-pack/tests/: README.md  test_config_drift_checker.py
build-packs/config-drift-checker-build-pack/tests/fixtures/: README.md  no-drift-sample.json
build-packs/json-health-checker-build-pack/: AGENTS.md  README.md  pack.json  project-context.md  pyproject.toml
build-packs/json-health-checker-build-pack/benchmarks/: active-set.json
build-packs/json-health-checker-build-pack/contracts/: README.md
build-packs/json-health-checker-build-pack/docs/specs/: README.md
build-packs/json-health-checker-build-pack/lineage/: source-template.json
build-packs/json-health-checker-build-pack/prompts/: README.md
build-packs/json-health-checker-build-pack/status/: deployment.json  lifecycle.json  readiness.json  retirement.json
build-packs/json-health-checker-build-pack/tests/: README.md  test_json_health_checker.py
templates/agent-memory-first-template-pack/: AGENTS.md  README.md  pack.json  project-context.md  pyproject.toml
templates/agent-memory-first-template-pack/benchmarks/: active-set.json
templates/agent-memory-first-template-pack/contracts/: agent-memory.schema.json
templates/agent-memory-first-template-pack/prompts/: README.md
templates/agent-memory-first-template-pack/status/: deployment.json  lifecycle.json  readiness.json  retirement.json
templates/agent-memory-first-template-pack/tests/: test_agent_memory_benchmark.py  test_agent_memory_benchmark_cli.py  test_agent_memory_cli.py
templates/ai-native-codex-package-template/: AGENTS.md  Makefile  README.md  pack.json  project-context.md  pyproject.toml
templates/ai-native-codex-package-template/benchmarks/: active-set.json
templates/ai-native-codex-package-template/contracts/: agent-memory-reader.schema.json  agent-telemetry-reader.schema.json
templates/ai-native-codex-package-template/docs/: benchmark-first-task.md  doc-update-record.json
templates/ai-native-codex-package-template/prompts/: automation-template.md  package-creation-business-friendly.md  runbook-strict.md
templates/ai-native-codex-package-template/status/: deployment.json  lifecycle.json  readiness.json  retirement.json
templates/ai-native-codex-package-template/tests/: test_agent_memory.py  test_agent_memory_benchmark.py  test_agent_memory_benchmark_cli.py  test_agent_memory_cli.py  test_brief_summary.py  test_doc_update_record.py  test_framework_profiles.py  test_project_pack_contract.py  test_run_manifest.py  test_task_goal_telemetry_summary.py  test_validate_doc_updates.py
templates/algosec-diagnostic-framework-template-pack/: AGENTS.md  README.md  pack.json  project-context.md  pyproject.toml
templates/algosec-diagnostic-framework-template-pack/status/: deployment.json  lifecycle.json  readiness.json  retirement.json
templates/codex-personal-assistant-template-pack/: AGENTS.md  README.md  pack.json  project-context.md  pyproject.toml
templates/codex-personal-assistant-template-pack/contracts/: README.md  assistant-profile.json  context-routing.json  memory-policy.json  operator-profile.json  partnership-policy.json  skill-catalog.json
templates/codex-personal-assistant-template-pack/prompts/: README.md  bootstrap-checklist.md  operator-discovery-guide.md  restart-memory-guide.md  skills-guide.md
templates/codex-personal-assistant-template-pack/status/: deployment.json  lifecycle.json  readiness.json  retirement.json
templates/factory-native-smoke-template-pack/: AGENTS.md  pack.json  project-context.md  pyproject.toml
templates/factory-native-smoke-template-pack/status/: deployment.json  lifecycle.json  readiness.json  retirement.json
(+3903 files in other folders)
