[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-first-template-pack"
version = "0.1.0"
description = "PackFactory-native template focused on agent restart-state memory and traversal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8,<9",
    "jsonschema>=4.25,<5",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18,<2",
    "pytest>=9.0,<10",
    "ruff>=0.12,<0.13",
]

[project.scripts]
agent-memory-first = "agent_memory_first.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_memory_first*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
files = ["src"]
python_version = "3.12"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.*"]
ignore_missing_imports = true
