[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-personal-assistant-template-pack"
version = "0.1.0"
description = "Codex Personal Assistant Template Pack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
codex-personal-assistant-template-pack = "codex_personal_assistant_template_pack.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["codex_personal_assistant_template_pack*"]
