[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "factory-native-smoke-template-pack"
version = "0.1.0"
description = "Minimal PackFactory-native smoke template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
factory-smoke-pack = "factory_smoke_pack.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["factory_smoke_pack*"]
