[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api-contract-sentinel-template-pack"
version = "0.1.0"
description = "API Contract Sentinel Template Pack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
api-contract-sentinel-template-pack = "api_contract_sentinel_template_pack.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["api_contract_sentinel_template_pack*"]
