[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "release-evidence-summarizer-template-pack"
version = "0.1.0"
description = "Release Evidence Summarizer Template Pack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
release-evidence-summarizer-template-pack = "release_evidence_summarizer_template_pack.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["release_evidence_summarizer_template_pack*"]
